// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "medium", compact: false, open: false and theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  margin: 2px 0;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: left;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  padding: 20px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  top: 6px;
  bottom: 6px;
  left: -4px;
  right: -4px;
}
button:focus::before {
  border: 2px solid #0A0AFF;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover::before {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.root {
  border-bottom: 1px solid #D8D8DB;
}
.heading {
  margin: 0;
  padding: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  transform-origin: 50% 50%;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.collapsible {
  padding: 0;
  overflow: hidden;
  height: 0;
  visibility: hidden;
  transition: height var(--p-transition-duration, .24s) ease,visibility var(--p-transition-duration, .24s) linear var(--p-transition-duration, .24s);
}
@keyframes keyframes-open {
  0%,99% {
    overflow: hidden;
  }
  100% {
    overflow: visible;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: false, open: true and theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  margin: 2px 0;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: left;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  padding: 20px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  top: 6px;
  bottom: 6px;
  left: -4px;
  right: -4px;
}
button:focus::before {
  border: 2px solid #0A0AFF;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover::before {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.root {
  border-bottom: 1px solid #D8D8DB;
}
.heading {
  margin: 0;
  padding: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  transform-origin: 50% 50%;
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.collapsible {
  padding: 0;
  overflow: hidden;
  height: auto;
  padding-bottom: 24px;
  visibility: visible;
  transition: height var(--p-transition-duration, .24s) ease,visibility var(--p-transition-duration, .24s);
  animation: keyframes-open var(--p-transition-duration, .24s) ease forwards;
}
@keyframes keyframes-open {
  0%,99% {
    overflow: hidden;
  }
  100% {
    overflow: visible;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: true, open: false and theme: dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  margin: 2px 0;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: left;
  color: #FBFCFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  top: 2px;
  bottom: 2px;
  left: -4px;
  right: -4px;
}
button:focus::before {
  border: 2px solid #0A0AFF;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover::before {
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.heading {
  margin: 0;
  padding: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  transform-origin: 50% 50%;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.collapsible {
  padding: 0;
  overflow: hidden;
  height: 0;
  visibility: hidden;
  transition: height var(--p-transition-duration, .24s) ease,visibility var(--p-transition-duration, .24s) linear var(--p-transition-duration, .24s);
}
@keyframes keyframes-open {
  0%,99% {
    overflow: hidden;
  }
  100% {
    overflow: visible;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: true, open: false and theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  margin: 2px 0;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: left;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  top: 2px;
  bottom: 2px;
  left: -4px;
  right: -4px;
}
button:focus::before {
  border: 2px solid #0A0AFF;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover::before {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.heading {
  margin: 0;
  padding: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  transform-origin: 50% 50%;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.collapsible {
  padding: 0;
  overflow: hidden;
  height: 0;
  visibility: hidden;
  transition: height var(--p-transition-duration, .24s) ease,visibility var(--p-transition-duration, .24s) linear var(--p-transition-duration, .24s);
}
@keyframes keyframes-open {
  0%,99% {
    overflow: hidden;
  }
  100% {
    overflow: visible;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", compact: true, open: true and theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  margin: 2px 0;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: left;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  top: 2px;
  bottom: 2px;
  left: -4px;
  right: -4px;
}
button:focus::before {
  border: 2px solid #0A0AFF;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover::before {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.heading {
  margin: 0;
  padding: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  transform-origin: 50% 50%;
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.collapsible {
  padding: 0;
  overflow: hidden;
  height: auto;
  padding-bottom: 8px;
  visibility: visible;
  transition: height var(--p-transition-duration, .24s) ease,visibility var(--p-transition-duration, .24s);
  animation: keyframes-open var(--p-transition-duration, .24s) ease forwards;
}
@keyframes keyframes-open {
  0%,99% {
    overflow: hidden;
  }
  100% {
    overflow: visible;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: false, open: false and theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  margin: 2px 0;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: left;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 12px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  top: 6px;
  bottom: 6px;
  left: -4px;
  right: -4px;
}
button:focus::before {
  border: 2px solid #0A0AFF;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover::before {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.root {
  border-bottom: 1px solid #D8D8DB;
}
.heading {
  margin: 0;
  padding: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  transform-origin: 50% 50%;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.collapsible {
  padding: 0;
  overflow: hidden;
  height: 0;
  visibility: hidden;
  transition: height var(--p-transition-duration, .24s) ease,visibility var(--p-transition-duration, .24s) linear var(--p-transition-duration, .24s);
}
@keyframes keyframes-open {
  0%,99% {
    overflow: hidden;
  }
  100% {
    overflow: visible;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: false, open: true and theme: dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  margin: 2px 0;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: left;
  color: #FBFCFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 12px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  top: 6px;
  bottom: 6px;
  left: -4px;
  right: -4px;
}
button:focus::before {
  border: 2px solid #0A0AFF;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover::before {
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.root {
  border-bottom: 1px solid #404044;
}
.heading {
  margin: 0;
  padding: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  transform-origin: 50% 50%;
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.collapsible {
  padding: 0;
  overflow: hidden;
  height: auto;
  padding-bottom: 24px;
  visibility: visible;
  transition: height var(--p-transition-duration, .24s) ease,visibility var(--p-transition-duration, .24s);
  animation: keyframes-open var(--p-transition-duration, .24s) ease forwards;
}
@keyframes keyframes-open {
  0%,99% {
    overflow: hidden;
  }
  100% {
    overflow: visible;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: false, open: true and theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  margin: 2px 0;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: left;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 12px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  top: 6px;
  bottom: 6px;
  left: -4px;
  right: -4px;
}
button:focus::before {
  border: 2px solid #0A0AFF;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover::before {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.root {
  border-bottom: 1px solid #D8D8DB;
}
.heading {
  margin: 0;
  padding: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  transform-origin: 50% 50%;
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.collapsible {
  padding: 0;
  overflow: hidden;
  height: auto;
  padding-bottom: 24px;
  visibility: visible;
  transition: height var(--p-transition-duration, .24s) ease,visibility var(--p-transition-duration, .24s);
  animation: keyframes-open var(--p-transition-duration, .24s) ease forwards;
}
@keyframes keyframes-open {
  0%,99% {
    overflow: hidden;
  }
  100% {
    overflow: visible;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: true, open: false and theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  margin: 2px 0;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: left;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  top: 2px;
  bottom: 2px;
  left: -4px;
  right: -4px;
}
button:focus::before {
  border: 2px solid #0A0AFF;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover::before {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.heading {
  margin: 0;
  padding: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  transform-origin: 50% 50%;
  transform: rotate3d(0,0,1,90deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.collapsible {
  padding: 0;
  overflow: hidden;
  height: 0;
  visibility: hidden;
  transition: height var(--p-transition-duration, .24s) ease,visibility var(--p-transition-duration, .24s) linear var(--p-transition-duration, .24s);
}
@keyframes keyframes-open {
  0%,99% {
    overflow: hidden;
  }
  100% {
    overflow: visible;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: "small", compact: true, open: true and theme: light 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  margin: 2px 0;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: left;
  color: #010205;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 4px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  top: 2px;
  bottom: 2px;
  left: -4px;
  right: -4px;
}
button:focus::before {
  border: 2px solid #0A0AFF;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover::before {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.heading {
  margin: 0;
  padding: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  transform-origin: 50% 50%;
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.collapsible {
  padding: 0;
  overflow: hidden;
  height: auto;
  padding-bottom: 8px;
  visibility: visible;
  transition: height var(--p-transition-duration, .24s) ease,visibility var(--p-transition-duration, .24s);
  animation: keyframes-open var(--p-transition-duration, .24s) ease forwards;
}
@keyframes keyframes-open {
  0%,99% {
    overflow: hidden;
  }
  100% {
    overflow: visible;
  }
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"medium","s":"small","m":"medium","l":"small","xl":"medium"}, compact: false, open: true and theme: dark 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  justify-content: space-between;
  margin: 2px 0;
  width: 100%;
  text-decoration: none;
  border: 0;
  outline: 0;
  gap: 24px;
  background: transparent;
  cursor: pointer;
  text-align: left;
  color: #FBFCFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-weight: 600;
  font-size: 1rem;
  padding: 12px 0;
}
button::before {
  content: "";
  position: absolute;
  border-radius: 4px;
  top: 6px;
  bottom: 6px;
  left: -4px;
  right: -4px;
}
button:focus::before {
  border: 2px solid #0A0AFF;
}
button:not(:focus-visible)::before {
  border: 0;
}
@media(min-width:480px) {
  button {
    font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
    padding: 20px 0;
  }
}

@media(min-width:760px) {
  button {
    font-size: 1rem;
    padding: 12px 0;
  }
}

@media(min-width:1000px) {
  button {
    font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
    padding: 20px 0;
  }
}

@media(min-width:1300px) {
  button {
    font-size: 1rem;
    padding: 12px 0;
  }
}

@media(min-width:1760px) {
  button {
    font-size: clamp(1.2rem, .12vw + 1.18rem, 1.31rem);
    padding: 20px 0;
  }
}

@media(hover:hover) {
  button::before {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover::before {
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.root {
  border-bottom: 1px solid #404044;
}
.heading {
  margin: 0;
  padding: 0;
}
.icon {
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
  transform-origin: 50% 50%;
  transform: rotate3d(0);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.collapsible {
  padding: 0;
  overflow: hidden;
  height: auto;
  padding-bottom: 24px;
  visibility: visible;
  transition: height var(--p-transition-duration, .24s) ease,visibility var(--p-transition-duration, .24s);
  animation: keyframes-open var(--p-transition-duration, .24s) ease forwards;
}
@keyframes keyframes-open {
  0%,99% {
    overflow: hidden;
  }
  100% {
    overflow: visible;
  }
}"
`;
